[package]
name = "perun-cosmwasm"
version = "0.1.0"
authors = ["Matthias Geihs <matthias@geihs.de>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "0.14.0-beta1"
cosmwasm-storage = "0.14.0-beta1"
cosmwasm-crypto = "0.14.0-beta1"
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
sha2 = "0.9.3"
cw-storage-plus = "0.6.0-alpha1"
cw0 = "0.6.0-alpha1"

[dev-dependencies]
cosmwasm-schema = "0.14.0-beta1"
rand_core = { version = "0.5", features = ["getrandom"] }
k256 = { version = "0.7.2", features = ["ecdsa"] }
